@@ -10,6 +10,15 @@
 
 
 
+* 2010-04-24 --- Valid CSS2 IDs
+
+  * Changed =org_html_manager::SID_REGEX= to match valid CSS-IDs. Dots are not
+    valid in IDs as of CSS 2 (see http://www.w3.org/TR/CSS2/grammar.html). The
+    regexp still supports the `old' style IDs we used to be backward
+    compatible.
+
+  * =SECNUM_REGEX= was not in use. Removed.
+
 * 2010-02-14 --- Title and #sec-1 in plain view, TOC anywhere
 
   * Some corrections of indentation and obsolet comments.
